--- a/challenge-one/static/CSS/style.css
+++ b/challenge-one/static/CSS/style.css
@@ -6,13 +6,32 @@
     justify-content: space-around;
     flex-direction: row;
 }
-.container-1{
+.container-1,.container-2{
     border: 1px solid blueviolet;
-    align-items: center;
+    text-align: center;
+    width: 75%;
+    margin: auto;
 }
 .flex-box-container-1 div{
     padding: 10px;
     align-items: center;
     display: flex;
     border: 1px solid blue;
+}
+/* .container-2{
+    border: 1px solid red;
+    text-align: center;
+    width: 75%;
+    margin: 0 auto;
+} */
+.flex-box-container-2{
+    border: 1px solid burlywood;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+.flex-box-container-2 img{
+    margin: 10px;
+    /* border: 1px solid blue; */
+    box-shadow: 0px 10px 50px rgba(0.0,0,0.7);
 }
